--- a/public/styles/categories.css
+++ b/public/styles/categories.css
@@ -11,9 +11,7 @@ ul {
   width: 55vw;
 }
 
-
-
-.categories-list {
+#categories-list {
   display: flex;
   justify-content: space-between;
   list-style-type: none;
@@ -61,9 +59,6 @@ ul {
   margin-right: 10px;
   padding-left: 19px;
   padding-bottom: 48%;
-
-
-
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
