--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -25,7 +25,7 @@ ul {
 
 
 
-.categories-list {
+#categories-list {
 
   display: flex;
   justify-content: space-between;
@@ -35,7 +35,6 @@ ul {
   font-size: 42px;
   color: #6300C7;
   font-weight: bold;
-  background-color: #F3E7FF;
   border: 3px solid #6300C7;
   border-image: repeating-linear-gradient(135deg,#6300C7 0 10px,#6300C7 0 20px#6300C7 0 30px) 8;
   -webkit-mask:
@@ -74,7 +73,7 @@ ul {
   margin-right: 10px;
   padding-left: 19px;
   padding-bottom: 48%;
-
+  background-color: #F3E7FF;
 
 
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
