--- a/public/styles/categories.css
+++ b/public/styles/categories.css
@@ -13,24 +13,13 @@ ul {
 
 #categories-list {
   display: flex;
-  justify-content: space-between;
   list-style-type: none;
   margin: 10px 10px 10px 10px;
   border-radius: 30px;
   font-size: 42px;
   color: #6300C7;
   font-weight: bold;
-  background-color: #F3E7FF;
-  border: 3px solid #6300C7;
-  border-image: repeating-linear-gradient(135deg,#6300C7 0 10px,#6300C7 0 20px#6300C7 0 30px) 8;
-  -webkit-mask:
-    conic-gradient(from 180deg at top 8px right 8px, #6300C7 90deg,#000 0)
-    var(--_i,200%) 0  /200% var(--_i,8px) border-box no-repeat,
-    conic-gradient(at bottom 8px left  8px,  #0000 90deg,#000 0)
-    0   var(--_i,200%)/var(--_i,8px) 200% border-box no-repeat,
-    linear-gradient(#000 0 0) padding-box no-repeat;
-  transition: .3s, -webkit-mask-position .3s .3s;
-  }
+}
 
   li:hover {
     --_i: 100%;
@@ -44,7 +33,7 @@ ul {
   margin-top: 16%;
   margin-left: -2%;
   width: 80em;
-  font-size: 25px;
+  font-size: 20px;
   color: #A76EDF;
   font-weight: lighter;
 }
@@ -53,21 +42,33 @@ ul {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 250px;
+  width: 235px;
   height: 1px;
-  margin-left: 10px;
-  margin-right: 10px;
+  /* margin-left: 10px; */
+  margin-top: 5px;
+  margin-right: 5px;
   padding-left: 19px;
   padding-bottom: 48%;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  border: 3px solid #6300C7;
+  background-color: #F3E7FF;
+  border-radius: 30px;
+  border-image: repeating-linear-gradient(135deg,#6300C7 0 10px,#6300C7 0 20px#6300C7 0 30px) 8;
+  -webkit-mask:
+    conic-gradient(from 180deg at top 8px right 8px, #6300C7 90deg,#000 0)
+    var(--_i,200%) 0  /200% var(--_i,8px) border-box no-repeat,
+    conic-gradient(at bottom 8px left  8px,  #0000 90deg,#000 0)
+    0   var(--_i,200%)/var(--_i,8px) 200% border-box no-repeat,
+    linear-gradient(#000 0 0) padding-box no-repeat;
+  transition: .3s, -webkit-mask-position .3s .3s;
 
 }
 
 .content-heading {
-  font-size: 60px;
+  font-size: 40px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   display: flex;
   flex-direction: row;
-  margin-left: 50px;
+  margin-left: 52px;
   font-weight: bolder;
 }
