--- a/public/styles/categories.css
+++ b/public/styles/categories.css
@@ -64,7 +64,7 @@ ul {
 
 }
 
-.content-heading {
+.categories-content-heading {
   font-size: 40px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   display: flex;
