--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,19 +1,30 @@
 .home {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 h1 {
-  font-size:xx-large;
-  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: xx-large;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
-  padding: 0 0 30px 60px;
+  padding: 0 0 0px 60px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  flex-wrap: wrap;
+  margin-top: 10vw;
 }
 
 h2 {
-  font-size:xx-small;
+  font-size: xx-small;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-style: italic;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
 }
 
 #get-started-button {
@@ -26,5 +37,6 @@ h2 {
   padding: 10px;
   margin-top: 10px;
   margin-right: 15px;
+  -ms-transform: translateY(-50%);
 
 }
