--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,11 +1,11 @@
-body {
+/* body {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
   background-color: whitesmoke;
-}
+} */
 
 #items-list {
   list-style-type: none;
