--- a/public/styles/new-item-button.css
+++ b/public/styles/new-item-button.css
@@ -14,9 +14,9 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
 }
- main {
+ /* main {
   display: flex;
   flex-direction: column;
   align-items: center;
 
- }
+ } */
