--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -4,27 +4,39 @@
 }
 
 h1 {
-  font-size:xx-large;
-  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: bold;
-  padding: 0 0 30px 60px;
+  font-size: xx-large;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    padding: 0 0 0px 60px;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    flex-wrap: wrap;
+    margin-top: 30vw;
 }
 
 h2 {
-  font-size:xx-small;
+  font-size: xx-small;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-style: italic;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin-top: -20px;
+  margin-left: 180px;
+  align-content: center;
+  width: 101%;
 }
 
 #get-started-button {
   position: absolute;
-  top: 50%;
+  top: 51%;
+  left: 48%;
   background-color: #9C3AFF;
   color: #fff;
-  border:none;
+  border: none;
   border-radius: 20px;
   padding: 10px;
-  margin-top: 10px;
-  margin-right: 15px;
-
+  margin-top: -10px;
+  margin-right: 19px;
 }
