--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -16,18 +16,23 @@ nav {
 }
 
 #login-button {
-  font-size: 20px;
+  font-size: 31px;
   border-radius: 50px;
   display: flex;
   background-color: #9C3AFF;
-  color: white;
-  width: 130px;
-  height: 45px;
+  color: #F3E7FF;
+  width: 160px;
+  height: 50px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
   align-content: center;
   justify-content: center;
   flex-wrap: wrap;
+  cursor: pointer;
+  margin-right: 40px;
+  margin-top: 20px;
+  border: none;
+  padding-bottom: 5px;
 }
 
 #logout-button {
@@ -35,7 +40,7 @@ nav {
   border-radius: 50px;
   display: flex;
   background-color: #9C3AFF;
-  color: white;
+  color: #F3E7FF;
   width: 130px;
   height: 45px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -44,13 +49,14 @@ nav {
   justify-content: center;
   flex-wrap: wrap;
   margin-top: -35px;
+  cursor: pointer;
 }
 
 #user-profile-link {
   margin-left: -57px;
   margin-top: 15px;
   background-color: #9C3AFF;
-  color: white;
+  color: #F3E7FF;
   border: none;
   margin-right: 8px;
 }
@@ -61,3 +67,10 @@ nav {
   flex-wrap: nowrap;
   align-items: baseline;
 }
+
+img {
+  width: 17vw;
+  height: 9vh;
+  cursor: pointer;
+}
+
