--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -6,7 +6,7 @@
 }
 
 h1 {
-  font-size: xx-large;
+  font-size: 5vw;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
   padding: 0 0 0px 60px;
@@ -14,31 +14,45 @@ h1 {
   flex-direction: column;
   align-content: center;
   flex-wrap: wrap;
-  margin-top: 22vw;
+  /* margin-top: 32vh; */
+  position: absolute;
+  top: 36%;
+  left: 20%;
 }
 
 h2 {
-  font-size: xx-small;
+  font-size: 2vw;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-style: italic;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  margin-top: -20px;
-  margin-left: 180px;
+  margin-top: -90px;
+  margin-left: 376px;
   align-content: center;
   width: 101%;
+  position: absolute;
+  top: 63%;
+  left: -3%;
 }
 
 #get-started-button {
+  width: 22vw;
+  height: 3vw;
   position: absolute;
-  top: 51%;
-  left: 48%;
+  top: 61%;
+  left: 38%;
   background-color: #9C3AFF;
-  color: #fff;
+  color: #F3E7FF;
   border: none;
   border-radius: 20px;
-  padding: 10px;
+  padding-bottom: 3px;
   margin-top: -10px;
   margin-right: 19px;
+  font-size: 2em;
+ text-align: center;
+ vertical-align: middle;
+ cursor: pointer;
+ font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ font-weight: bolder;
 }
