--- a/public/styles/items.css
+++ b/public/styles/items.css
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: absolute;
+  height: auto;
+  top: 18%;
+  left: 19%;
 }
 
 #items-list {
@@ -9,10 +13,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 200em;
   height: auto;
   color: #6300C7;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 
 .item-wrapper {
