--- a/public/styles/new-item-button.css
+++ b/public/styles/new-item-button.css
@@ -1,18 +1,22 @@
 #new-item-button {
-  font-size: 20px;
+  font-size: 28px;
   border-radius: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-right: 200px;
-  margin-top: 120px;
+  /* margin-right: 200px;
+  margin-top: 120px; */
   padding-top: 8px;
-  background-color: #6300C7;
+  background-color: #9C3AFF;
   color: white;
   width: 150px;
   height: 50px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
+  position: fixed;
+  top: 88%;
+  left: 45%;
+  cursor: pointer;
 }
  /* main {
   display: flex;
