--- a/public/styles/change-category.css
+++ b/public/styles/change-category.css
@@ -1,11 +1,20 @@
-.setCategory-content-heading {
-    font-size: 40px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    display: flex;
-    flex-direction: row;
-    margin-left: 52px;
-    font-weight: bolder;
+#assign-categories {
+  position: absolute;
+  top: 18%;
+  left: 27%;
 }
+
+
+.setCategory-content-heading {
+  font-size: 40px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  display: flex;
+  flex-direction: row;
+  margin-left: 52px;
+  font-weight: bolder;
+
+}
+
 
 .assign-category-div {
   display: flex;
@@ -30,6 +39,7 @@
     0   var(--_i,200%)/var(--_i,8px) 200% border-box no-repeat,
     linear-gradient(#000 0 0) padding-box no-repeat;
   transition: .3s, -webkit-mask-position .3s .3s;
+  cursor: pointer;
 
 }
 
