--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -53,12 +53,20 @@ nav {
 }
 
 #user-profile-link {
-  margin-left: -57px;
-  margin-top: 15px;
+  font-size: 20px;
+  border-radius: 50px;
+  display: flex;
   background-color: #9C3AFF;
   color: #F3E7FF;
-  border: none;
-  margin-right: 8px;
+  width: 130px;
+  height: 45px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  align-content: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: -35px;
+  cursor: pointer;
 }
 
 #profile-section {
