--- a/public/styles/newItemPanel.css
+++ b/public/styles/newItemPanel.css
@@ -19,12 +19,24 @@
 #save-item-button {
   position: absolute;
   top: 43%;
-  left: 48%;
+  left: 44%;
   background-color: #9C3AFF;
   color: #fff;
   border: none;
-  border-radius: 5px;
+  border-radius: 20px;
   padding: 10px;
   margin-right: 19px;
   width: 70px;
+  font-size: 20px;
+  border-radius: 35px;
+  display: flex;
+  color: #F3E7FF;
+  width: 130px;
+  height: 45px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  align-content: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 20px;
 }
