--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,7 +1,6 @@
 nav {
   display: flex;
   justify-content: space-between;
-
 }
 
 #logo-button {
@@ -36,49 +35,64 @@ nav {
 }
 
 #logout-button {
-  font-size: 20px;
+  font-size: 31px;
   border-radius: 50px;
   display: flex;
   background-color: #9C3AFF;
   color: #F3E7FF;
-  width: 130px;
-  height: 45px;
+  width: 160px;
+  height: 50px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
   align-content: center;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: -35px;
   cursor: pointer;
+  margin-right: 40px;
+  margin-top: 20px;
+  border: none;
+  padding-bottom: 5px;
 }
 
 #user-profile-link {
-  font-size: 20px;
+  font-size: 31px;
   border-radius: 50px;
   display: flex;
-  background-color: #9C3AFF;
-  color: #F3E7FF;
-  width: 130px;
-  height: 45px;
+  background-color: white;
+  color: #9C3AFF;
+  width: 291px;
+  height: 50px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
   align-content: center;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: -35px;
   cursor: pointer;
+  margin-right: 5px;
+  margin-top: 22px;
+  border: none;
+  padding-bottom: 5px;
 }
 
 #profile-section {
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: baseline;
 }
 
 img {
   width: 17vw;
   height: 9vh;
   cursor: pointer;
+}
+
+.fa-circle-user {
+
+font-size: 50px;
+}
+
+.fa-solid.fa-circle-user {
+  color: #9C3AFF;
+  font-size: 54px;
+  margin-top: 20px;
+  margin-right: 5px;
 }
 
