--- a/public/styles/categories.css
+++ b/public/styles/categories.css
@@ -1,78 +1,78 @@
-#categories {
+#categories, #assign-categories {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
   position: absolute;
   top: 18%;
-  left: 27%;
+  align-items: center;
+  width: 100%;
 }
 
 ul {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 55vw;
 }
 
 #categories-list {
-  display: flex;
+  justify-content: flex-start;
   list-style-type: none;
   margin: 10px 10px 10px 10px;
   border-radius: 30px;
-  font-size: 42px;
+  font-size: 32px;
   color: #6300C7;
   font-weight: bold;
+  gap: 8px;
+  max-width: 820px;
+  /* background-color: red; */
 }
 
-  li:hover {
-    --_i: 100%;
-    color: #6300C7;
-    transition: .3s, -webkit-mask-size .3s .3s;
-  }
+li:hover {
+  --_i: 100%;
+  color: #6300C7;
+  transition: .3s, -webkit-mask-size .3s .3s;
+  scale: 1.02;
+}
 
 .item-count {
   display: flex;
   flex-direction: row;
-  margin-top: 16%;
-  margin-left: -2%;
-  width: 80em;
+  margin-top: 20px;
+  width: 100%;
   font-size: 20px;
   color: #A76EDF;
   font-weight: lighter;
 }
 
-.category-div {
+.category-div, .assign-category-div {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 235px;
-  height: 1px;
-  /* margin-left: 10px; */
-  margin-top: 5px;
-  margin-right: 5px;
-  padding-left: 19px;
-  padding-bottom: 48%;
+  width: 220px;
+  height: 90px;
+  padding: 12px 19px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  border: 3px solid #6300C7;
+  border: 2px solid #d1a4ff;
   background-color: #F3E7FF;
-  border-radius: 30px;
-  border-image: repeating-linear-gradient(135deg,#6300C7 0 10px,#6300C7 0 20px#6300C7 0 30px) 8;
+  border-radius: 26px;
+  border-image: repeating-linear-gradient(135deg, #6300C7 0 10px, #6300C7 0 20px#6300C7 0 30px) 8;
   -webkit-mask:
-    conic-gradient(from 180deg at top 8px right 8px, #6300C7 90deg,#000 0)
-    var(--_i,200%) 0  /200% var(--_i,8px) border-box no-repeat,
-    conic-gradient(at bottom 8px left  8px,  #0000 90deg,#000 0)
-    0   var(--_i,200%)/var(--_i,8px) 200% border-box no-repeat,
+    conic-gradient(from 180deg at top 8px right 8px, #6300C7 90deg, #000 0) var(--_i, 200%) 0 /200% var(--_i, 8px) border-box no-repeat,
+    conic-gradient(at bottom 8px left 8px, #0000 90deg, #000 0) 0 var(--_i, 200%)/var(--_i, 8px) 200% border-box no-repeat,
     linear-gradient(#000 0 0) padding-box no-repeat;
-  transition: .3s, -webkit-mask-position .3s .3s;
+  transition: .25s, -webkit-mask-position .25s .25s;
   cursor: pointer;
-
 }
 
-.categories-content-heading {
+.categories-content-heading, .setCategory-content-heading {
   font-size: 40px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  display: flex;
-  flex-direction: row;
-  margin-left: 52px;
+  /* display: flex;
+  flex-direction: row; */
   font-weight: bolder;
+  text-align: left;
+  max-width: 820px;
+  width: 100%;
+  padding-left: 50px;
+  margin-bottom: 10px;
 }
