--- a/public/styles/change-category.css
+++ b/public/styles/change-category.css
@@ -1,46 +1,21 @@
-#assign-categories {
-  position: absolute;
-  top: 18%;
-  left: 27%;
-}
-
-
-.setCategory-content-heading {
-  font-size: 40px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  display: flex;
-  flex-direction: row;
-  margin-left: 52px;
-  font-weight: bolder;
-
-}
-
-
 .assign-category-div {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 235px;
-  height: 1px;
-  /* margin-left: 10px; */
-  margin-top: 5px;
-  margin-right: 5px;
-  padding-left: 19px;
-  padding-bottom: 48%;
+  width: 220px;
+  height: 90px;
+  padding: 12px 19px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  border: 3px solid #6300C7;
+  border: 2px solid #d1a4ff;
   background-color: #F3E7FF;
-  border-radius: 30px;
-  border-image: repeating-linear-gradient(135deg,#6300C7 0 10px,#6300C7 0 20px#6300C7 0 30px) 8;
+  border-radius: 26px;
+  border-image: repeating-linear-gradient(135deg, #6300C7 0 10px, #6300C7 0 20px#6300C7 0 30px) 8;
   -webkit-mask:
-    conic-gradient(from 180deg at top 8px right 8px, #6300C7 90deg,#000 0)
-    var(--_i,200%) 0  /200% var(--_i,8px) border-box no-repeat,
-    conic-gradient(at bottom 8px left  8px,  #0000 90deg,#000 0)
-    0   var(--_i,200%)/var(--_i,8px) 200% border-box no-repeat,
+    conic-gradient(from 180deg at top 8px right 8px, #6300C7 90deg, #000 0) var(--_i, 200%) 0 /200% var(--_i, 8px) border-box no-repeat,
+    conic-gradient(at bottom 8px left 8px, #0000 90deg, #000 0) 0 var(--_i, 200%)/var(--_i, 8px) 200% border-box no-repeat,
     linear-gradient(#000 0 0) padding-box no-repeat;
-  transition: .3s, -webkit-mask-position .3s .3s;
+  transition: .25s, -webkit-mask-position .25s .25s;
   cursor: pointer;
-
 }
 
 
