--- a/public/styles/items.css
+++ b/public/styles/items.css
@@ -5,7 +5,7 @@
   position: absolute;
   height: auto;
   top: 18%;
-  left: 19%;
+  width: 100%;
 }
 
 #items-list {
@@ -16,7 +16,7 @@
   height: auto;
   color: #6300C7;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+  max-width: 820px;
 }
 
 .item-wrapper {
@@ -33,17 +33,20 @@
 }
 
 .item-wrapper span {
-font-size: 25px;
-margin-left: 20px;
+  font-size: 25px;
+  margin-left: 20px
 }
 
 .action-buttons {
+  display: flex;
+  gap: 20px;
   margin-top: 5px;
   margin-right: 15px;
   color: #A76EDF
 }
 
-.fa-solid, .fas {
+.fa-solid,
+.fas {
   font-size: 20px;
 }
 
