--- a/public/styles/new-item-button.css
+++ b/public/styles/new-item-button.css
@@ -1,20 +1,19 @@
 #new-item-button {
-  font-size: 28px;
+  font-size: 24px;
   border-radius: 50px;
+  padding: 16px 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   /* margin-right: 200px;
   margin-top: 120px; */
-  padding-top: 8px;
   background-color: #9C3AFF;
   color: white;
-  width: 150px;
-  height: 50px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
   position: fixed;
-  top: 88%;
+  bottom: 60px;
   left: 45%;
   cursor: pointer;
 }
