--- a/public/styles/newItemPanel.css
+++ b/public/styles/newItemPanel.css
@@ -1,33 +1,31 @@
-#new-item {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  flex-direction: column;
-  align-content: center;
-  align-items: baseline;
-  margin-top: 3vw;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+/* #new-item {
+position: absolute;
+top: 20%;
+left: 20%;
+} */
 
 #new-item-title {
-  background-color: lightgray;
+  background-color: #F3E7FF;
   margin-top: 20px;
   width: 25%;
   height: 32px;
+  position: absolute;
+  top: 36%;
+  left: 37%;
+  color: black;
+  font-size: 28px;
+  font-weight: lighter;
 }
 
 #save-item-button {
   position: absolute;
-  top: 43%;
-  left: 44%;
+  top: 44%;
+  left: 46%;
   background-color: #9C3AFF;
-  color: #fff;
   border: none;
   border-radius: 20px;
   padding: 10px;
-  margin-right: 19px;
-  width: 70px;
-  font-size: 20px;
+  font-size: 30px;
   border-radius: 35px;
   display: flex;
   color: #F3E7FF;
@@ -37,6 +35,28 @@
   font-weight: bold;
   align-content: center;
   justify-content: center;
-  flex-wrap: wrap;
   margin-top: 20px;
+}
+
+
+.suggested-category-button {
+position: absolute;
+top: 38%;
+left: 63.2%;
+font-size: 28px;
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+font-weight: bolder;
+}
+
+.new-item-content-heading {
+  font-size: 40px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  padding: 100px 0 0px 20px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  flex-wrap: wrap;
+  margin-top: 95px;
+  margin-right: 35px;
 }
