--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -7,6 +7,7 @@
 
 h1 {
   font-size: 5vw;
+  letter-spacing: -5px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
   padding: 0 0 0px 60px;
