--- a/public/styles/items.css
+++ b/public/styles/items.css
@@ -41,8 +41,8 @@
   display: flex;
   gap: 20px;
   margin-top: 5px;
-  margin-right: 15px;
-  color: #A76EDF
+  margin-right: 25px;
+  color: #9C3AFF;
 }
 
 .fa-solid,
