--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,12 +1,12 @@
 nav {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
 }
 
 #logo-button {
   display: flex;
   justify-content: flex-start;
-  height: 40px;
 }
 
 .appName {
@@ -14,64 +14,31 @@ nav {
   justify-content: flex-start;
 }
 
-#login-button {
-  font-size: 31px;
-  border-radius: 50px;
-  display: flex;
-  background-color: #9C3AFF;
-  color: #F3E7FF;
-  width: 160px;
-  height: 50px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: bold;
-  align-content: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  cursor: pointer;
-  margin-right: 40px;
-  margin-top: 20px;
-  border: none;
-  padding-bottom: 5px;
-}
-
-#logout-button {
-  font-size: 31px;
-  border-radius: 50px;
-  display: flex;
-  background-color: #9C3AFF;
-  color: #F3E7FF;
-  width: 160px;
-  height: 50px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: bold;
-  align-content: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  cursor: pointer;
-  margin-right: 40px;
-  margin-top: 20px;
-  border: none;
-  padding-bottom: 5px;
-}
-
 #user-profile-link {
   font-size: 31px;
   border-radius: 50px;
   display: flex;
+  align-items: center;
+  align-content: flex-start;
+  text-wrap: nowrap;
+  max-lines: 1;
+  gap: 10px;
+  width: 100%;
+  text-align: left;
   background-color: white;
   color: #9C3AFF;
-  width: 291px;
-  height: 50px;
+  max-width: 320px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: bold;
-  align-content: center;
-  justify-content: center;
-  flex-wrap: wrap;
   cursor: pointer;
-  margin-right: 5px;
+  margin-right: 25px;
   margin-top: 22px;
   border: none;
-  padding-bottom: 5px;
+}
+
+#user-profile-link span {
+  text-wrap: nowrap;
+  font-size: 22px;
+  color: #666;
 }
 
 #profile-section {
@@ -80,19 +47,18 @@ nav {
 
 img {
   width: 17vw;
-  height: 9vh;
+  height: 8vh;
+  min-width: 6vw;
+  min-height: 3vw;
   cursor: pointer;
+  object-fit: contain;
 }
 
 .fa-circle-user {
-
-font-size: 50px;
+  font-size: 50px;
 }
 
 .fa-solid.fa-circle-user {
   color: #9C3AFF;
   font-size: 54px;
-  margin-top: 20px;
-  margin-right: 5px;
 }
-
