--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,59 +1,43 @@
 .home {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  position: absolute;
+  height: auto;
+  width: 100%;
+  text-align: center;
 }
 
-h1 {
+.home h1 {
   font-size: 5vw;
-  letter-spacing: -5px;
+  letter-spacing: -0.05vw;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
   padding: 0 0 0px 60px;
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  flex-wrap: wrap;
   /* margin-top: 32vh; */
-  position: absolute;
-  top: 36%;
-  left: 20%;
+  margin-top: 30vh;
 }
 
-h2 {
+.home h2 {
   font-size: 2vw;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-style: italic;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  margin-top: -90px;
-  margin-left: 376px;
-  align-content: center;
-  width: 101%;
-  position: absolute;
-  top: 63%;
-  left: -3%;
+  width: 100%;
+  margin-top: -40px;
 }
 
+
 #get-started-button {
-  width: 22vw;
-  height: 3vw;
-  position: absolute;
-  top: 61%;
-  left: 38%;
+  font-size: 24px;
+  border-radius: 50px;
+  padding: 16px 30px;
+  /* margin-right: 200px;
+  margin-top: 120px; */
   background-color: #9C3AFF;
-  color: #F3E7FF;
-  border: none;
-  border-radius: 20px;
-  padding-bottom: 3px;
-  margin-top: -10px;
-  margin-right: 19px;
-  font-size: 2em;
- text-align: center;
- vertical-align: middle;
- cursor: pointer;
- font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
- font-weight: bolder;
+  color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  cursor: pointer;
+  margin-top: 30px;
 }
