--- a/public/styles/newItemPanel.css
+++ b/public/styles/newItemPanel.css
@@ -1,62 +1,41 @@
-/* #new-item {
-position: absolute;
-top: 20%;
-left: 20%;
-} */
+#new-item input {
+  max-width: 820px;
+}
 
-#new-item-title {
-  background-color: #F3E7FF;
-  margin-top: 20px;
-  width: 25%;
-  height: 32px;
-  position: absolute;
-  top: 36%;
-  left: 37%;
-  color: black;
+#suggested-categories {
+  max-width: 820px;
+  width: 100%;
+  text-align: left;
   font-size: 28px;
-  font-weight: lighter;
-}
-
-#save-item-button {
-  position: absolute;
-  top: 44%;
-  left: 46%;
-  background-color: #9C3AFF;
-  border: none;
-  border-radius: 20px;
-  padding: 10px;
-  font-size: 30px;
-  border-radius: 35px;
-  display: flex;
-  color: #F3E7FF;
-  width: 130px;
-  height: 45px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: bold;
-  align-content: center;
-  justify-content: center;
-  margin-top: 20px;
-}
-
-
-.suggested-category-button {
-position: absolute;
-top: 38%;
-left: 63.2%;
-font-size: 28px;
-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-weight: bolder;
+  font-weight: bolder;
+  color: #9C3AFF;
+  margin: 20px 0;
 }
 
 .new-item-content-heading {
   font-size: 40px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: bold;
-  padding: 100px 0 0px 20px;
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  flex-wrap: wrap;
-  margin-top: 95px;
-  margin-right: 35px;
+  font-weight: bolder;
+  text-align: left;
+  max-width: 820px;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.suggested-category-button {
+  opacity: 0;
+  transform: translateY(6px);
+  animation: fadeAndRise 0.2s ease-out forwards;
+}
+
+@keyframes fadeAndRise {
+  0% {
+    opacity: 0;
+    transform: translateY(6px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
