--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -1,24 +1,23 @@
 .profile-content-heading {
-  font-size: xx-large;
+  font-size: 40px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: bold;
-  padding: 100px 0 0px 20px;
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  flex-wrap: wrap;
-  margin-top: 5vw;
+  font-weight: bolder;
+  text-align: left;
+  max-width: 780px;
+  width: 100%;
+  margin-bottom: 20px;
 }
 
 #profile-data {
+  width: 100%;
+  max-width: 780px;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
   flex-direction: column;
-  align-content: center;
-  align-items: baseline;
-  margin-top: 3vw;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#profile-data input {
+  width: 100%;
 }
 
 #name {
@@ -30,20 +29,6 @@
   margin-top: 10px;
   width: 25%;
   height: 32px;
-}
-
-.save-profile-button {
-  position: absolute;
-  top: 43%;
-  left: 48%;
-  background-color: #9C3AFF;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  padding: 10px;
-  margin-top: 80px;
-  margin-right: 19px;
-  width: 70px;
 }
 
 input {
@@ -58,7 +43,7 @@ input {
   color: #202123;
   border: 1px solid #CDD9ED;
   background: #fff;
-  background-color: #efefff;
+  background-color: #f8f8ff;
   transition: border .3s ease;
 }
 
